<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_privacy_policy"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate_us"
        android:title="@string/menu_rate_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_more_apps"
        android:title="@string/menu_more_apps"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_us"
        android:title="@string/menu_about_us"
        app:showAsAction="never" />
</menu>
